test/functions/operatorOverloads/operatorMethods/inCallStack.good
inCallStack.chpl:7: In method '+':
inCallStack.chpl:8: error: unresolved call 'someBrokenFunc(int(64))'
inCallStack.chpl:13: note: this candidate did not match: someBrokenFunc(y: string)
inCallStack.chpl:8: note: because actual argument #1 with type 'int(64)'
inCallStack.chpl:13: note: is passed to formal 'y: string'
  inCallStack.chpl:20: called as +(lhs: bar, rhs: bar)
